<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/registrate"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/size_25" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="40dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_20">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/hint_name">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tieName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:textColor="@color/purple">

                            </com.google.android.material.textfield.TextInputEditText>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/hint_phone"
                            app:counterEnabled="true"
                            app:counterMaxLength="10">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiePhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:textColor="@color/purple">

                            </com.google.android.material.textfield.TextInputEditText>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/hint_city">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tieCity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:textColor="@color/purple">

                            </com.google.android.material.textfield.TextInputEditText>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/hint_email">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tieEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/purple">

                            </com.google.android.material.textfield.TextInputEditText>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/hint_password"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiePassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:textColor="@color/purple">

                            </com.google.android.material.textfield.TextInputEditText>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btnRegister"
                            style="@style/ButtonRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:padding="5dp"
                            android:text="@string/resgistrar"
                            android:textAllCaps="false" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>