<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.LoginActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/layoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:padding="@dimen/padding_20">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textSize="@dimen/size_25"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginVertical="@dimen/margin_30"
                        android:src="@drawable/logo" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/hint_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/purple">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/purple">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_20">

                        <Button
                            android:id="@+id/btnRegister"
                            style="@style/ButtonRegister"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/resgistrar"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/btnLogIn"
                            style="@style/ButtonLogin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/iniciar_sesion"
                            android:textAllCaps="false" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imvBtnGoogle"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="@dimen/padding_20"
                        android:background="@drawable/ic_google"
                        android:foreground="?attr/selectableItemBackground" />
                    <ImageButton
                        android:id="@+id/imvBtnFacebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="@dimen/padding_20"
                        android:background="@drawable/ic_facebook"
                        android:foreground="?attr/selectableItemBackground" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/jccs"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</layout>