<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeActivity"
        android:orientation="vertical"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layoutHome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_20">

                    <TextView
                        android:id="@+id/tvRemoteConf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="RemoteFonfig"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_25"
                        android:textAlignment="center"
                        android:layout_marginVertical="20dp"/>

                    <TextView
                        android:id="@+id/tvProvider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Provider"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/size_25"
                        android:textAlignment="center"
                        android:layout_marginVertical="20dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilName"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:enabled="false"
                        android:hint="@string/hint_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textColor="@android:color/darker_gray">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhone"
                        style="@style/TextInputLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/hint_phone"
                        app:counterEnabled="true"
                        android:enabled="false"
                        app:counterMaxLength="10">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiePhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:textColor="@android:color/darker_gray">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCity"
                        style="@style/TextInputLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:hint="@string/hint_city"
                        app:counterEnabled="false"
                        android:enabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tieCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            app:hintTextColor="@android:color/darker_gray">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnUpdate"
                        style="@style/ButtonRegister"
                        android:backgroundTint="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginHorizontal="15dp"
                        android:padding="5dp"
                        android:text="@string/log_editar"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnLogOut"
                        style="@style/ButtonRegister"
                        android:backgroundTint="@color/purple"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginHorizontal="15dp"
                        android:padding="5dp"
                        android:text="@string/log_out"
                        android:textAllCaps="false" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</layout>